# docctl

./: .gitignore  .importlinter  .trivyignore.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  SKILL.md  codecov.yml  flake.nix  pyproject.toml  sonar-project.properties  trivy.yaml
.github/: dependabot.yml
.github/workflows/: ci-linters.yml  ci.yml  dependabot-automerge.yml  dependency-review.yml  publish-pypi.yml  release.yml  security-trivy.yml
benchmarks/embedding_eval/: .gitignore  README.md  models.json  run_xquad_benchmark.py
docs/: .gitignore  DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  embedding-benchmark-xquad.md  index.md  linting-and-static-analysis.md  release-automation.md  retrieval-reranking.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md
docs/exec-plans/completed/: README.md
docs/product-specs/: cli-contract.md  index.md
docs/references/: google-python-style-docstrings.md  index.md
scripts/: check-markdown-links.sh  typecheck-changed.sh
src/docctl/: __init__.py  chunking.py  cli.py  coerce.py  config.py  document_extract.py  embeddings.py  errors.py  ids.py  index_store.py  jsonio.py  models.py  pdf_extract.py  reranking.py  service_doctor.py  service_ingest.py  service_manifest.py  service_query.py  service_session.py  service_session_worker.py  service_snapshot.py  service_types.py  services.py  text_sanitize.py
src/docctl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/acceptance/: test_cli_contract.py
tests/integration/: test_failures.py  test_import_export.py  test_ingest.py  test_machine_output.py  test_search.py  test_session.py  test_session_worker.py  test_show.py  test_stats_doctor.py
tests/unit/: test_cli_branches.py  test_coerce_and_jsonio_branches.py  test_document_extract.py  test_exit_codes.py  test_ids.py  test_json_determinism.py  test_low_level_branches.py  test_manifest_and_query_branches.py  test_metadata_mapping.py  test_reranking_branches.py  test_service_branches.py  test_session_worker_branches.py  test_snapshot_branches.py  test_text_sanitize.py
