[project]
name = "docctl"
version = "0.1.0"
description = "CLI-first local document retrieval tool"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "chromadb>=0.5.23",
  "llama-index-core>=0.11.23",
  "pdfplumber",
  "pypdf",
  "reportlab",
  "sentence-transformers>=3.3.1",
  "typer>=0.12.5",
]

[project.scripts]
docctl = "docctl.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "pytest>=8.3.4",
  "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
docstring-code-format = true
