[project]
name = "docctl"
version = "0.1.0"
description = "CLI-first local document retrieval tool"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "chromadb>=0.5.23",
  "llama-index-core>=0.11.23",
  "python-docx",
  "pdfplumber",
  "pypdf",
  "reportlab",
  "sentence-transformers>=3.3.1",
  "typer>=0.12.5",
]

[project.scripts]
docctl = "docctl.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "import-linter>=2.7",
  "mypy>=1.15.0",
  "pytest>=8.3.4",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "B",
  "C90",
  "RET",
  "SIM",
  "ARG",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 5
max-positional-args = 4
max-branches = 10
max-locals = 12
max-public-methods = 12
max-returns = 5
max-statements = 35
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR0913", "PLR0915"]
"src/docctl/cli.py" = ["PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.13"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
