[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docctl"
version = "0.2.1"
description = "CLI-first local document retrieval tool"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12,<3.14"
keywords = ["cli", "documents", "local-first", "retrieval", "search"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing",
  "Topic :: Utilities",
]
dependencies = [
  "chromadb>=0.5.23",
  "llama-index-core>=0.11.23",
  "python-docx",
  "pdfplumber",
  "pypdf",
  "reportlab",
  "sentence-transformers>=3.3.1",
  "torch==2.10.0",
  "typer>=0.12.5",
]

[project.urls]
Homepage = "https://github.com/GeorgesAlkhouri/docctl"
Repository = "https://github.com/GeorgesAlkhouri/docctl"
Issues = "https://github.com/GeorgesAlkhouri/docctl/issues"
Changelog = "https://github.com/GeorgesAlkhouri/docctl/blob/main/CHANGELOG.md"

[project.scripts]
docctl = "docctl.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "import-linter>=2.7",
  "mypy>=1.15.0",
  "python-semantic-release>=10.5.3,<11",
  "pytest>=8.3.4",
  "pytest-cov>=6.1.1",
  "ruff>=0.11.0",
  "twine>=6.1.0,<7",
]

[tool.uv]
package = true

[tool.semantic_release]
allow_zero_version = true
major_on_zero = false
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
build_command = "uv lock && git add uv.lock"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "init"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "refactor", "style", "test"]
other_allowed_tags = ["build", "chore", "ci", "docs", "refactor", "style", "test"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = false

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E4",
  "E7",
  "E9",
  "F",
  "I",
  "B",
  "C90",
  "RET",
  "SIM",
  "ARG",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-args = 5
max-positional-args = 4
max-branches = 10
max-locals = 12
max-public-methods = 12
max-returns = 5
max-statements = 35
max-nested-blocks = 4

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR0913", "PLR0915"]
"src/docctl/cli.py" = ["PLR0913"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_configs = true
